--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="flex px-48 mt-10">
             <div class="grow mb-[1000px]">hi mom</div>
             <!-- side menu -->
-            <div class="w-[345px]">
+            <div class="w-[300px]">
 
                 <p class="text-[16px] font-bold">Hey unixnexo, you have</p>
                 <p class="text-[40px] font-bold">2 plays</p>
@@ -589,13 +589,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
@@ -643,13 +643,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
@@ -697,13 +697,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
@@ -767,13 +767,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
@@ -821,13 +821,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
@@ -875,13 +875,13 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1">
-                                <button class="border border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                                <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange hover:*:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                     </svg>                                      
                                 </button>
-                                <button class="border border-soundcloud-divide p-1 rounded-sm">
+                                <button class="bg-soundcloud-main-bg border border-soundcloud-divide p-1 rounded-sm">
                                     <svg fill="white" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" class="size-3.5">
                                         <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
                                     </svg>                                                                       
