--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,29 @@
             </ul>
         </div>
 
+        <!-- player - fixed at bottom - < md screens only -->
+        <div class="fixed bottom-[66px] left-1/2 -translate-x-1/2 w-[97vw] bg-soundcloud-hover rounded-full p-3">
+            <div class="flex space-x-3 px-1">
+                <div class="flex items-center justify-center size-12 bg-white rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
+                    </svg>                      
+                </div>
+                <div class="flex flex-col">
+                    <p class="text-white">Alesso, Nate Smith - I Like it</p>
+                    <p>Alesso</p>
+                </div>
+                <div class="flex items-center justify-end grow space-x-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.217 10.907a2.25 2.25 0 1 0 0 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186 9.566-5.314m-9.566 7.5 9.566 5.314m0 0a2.25 2.25 0 1 0 3.935 2.186 2.25 2.25 0 0 0-3.935-2.186Zm0-12.814a2.25 2.25 0 1 0 3.933-2.185 2.25 2.25 0 0 0-3.933 2.185Z" />
+                    </svg>                      
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-7">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                    </svg>                      
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <script defer src="./src/js/fixMenu.component.js"></script>
