--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="flex md:px-10 2xl:px-48 mt-10 mb-14">
 
             <!-- main content - sliders -->
-            <div class="grow overflow-hidden pl-3 md:px-3 lg:mr-5">
+            <div class="grow overflow-hidden md:px-3 lg:mr-5 mb-32 md:mb-0">
 
                 <!-- slider 1 -->
                 <!-- <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white">Recently Played</h1> -->
@@ -515,7 +515,7 @@
                     </div>
                 </div> -->
 
-                <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10">Recently played</h1>
+                <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-2">Recently played</h1>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover1.jpg" main-text="Los Ultimos Son Los Primeros" secondary-text="AP, Krispy Music, juanpryt, Fuerza Regida"></slider-item>
                     <slider-item img="./public/imgs/cover2.jpg" main-text="Машина" secondary-text="PoorQualityPorn"></slider-item>
@@ -526,7 +526,7 @@
                     <slider-item img="./public/imgs/cover16.jpg" main-text="دور از نفست_ آرمان گرشاسبی_Arman Garshasbi-Door az nafasat" secondary-text="Saeideh Abaspour, Merisa, Mohammad Jeihani, Donya"></slider-item>
                 </custom-slider>
 
-                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10">More of what you like</h2>
+                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-2">More of what you like</h2>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover8.jpg" main-text="Bazar Khoramshahr" secondary-text="Mohsen Chavoshi, mahan, Erfan Tahmasbi, Googoosh"></slider-item>
                     <slider-item img="./public/imgs/cover9.jpg" main-text="Dj Mehrdad Aghdam" secondary-text="Top tracks"></slider-item>
