--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
 
     <main>
         
-        <div class="flex md:px-10 2xl:px-48 mt-10 mb-14">
+        <div class="flex px-0 md:px-10 2xl:px-44 mb-14 md:divide-x divide-soundcloud-divide">
 
             <!-- main content - sliders -->
-            <div class="grow overflow-hidden md:px-3 lg:mr-5 mb-32 md:mb-0">
+            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-0">
 
                 <!-- slider 1 -->
                 <!-- <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white">Recently Played</h1> -->
@@ -541,7 +541,7 @@
             </div>
 
             <!-- side menu -->
-            <div class="hidden lg:block w-[300px]">
+            <div class="hidden lg:block w-[310px] pt-10 pl-5">
 
                 <p class="text-[16px] font-bold">Hey unixnexo, you have</p>
                 <p class="text-[40px] font-bold">2 plays</p>
